fixed overflow

--- a/src/portfolio.less
+++ b/src/portfolio.less
@@ -9,8 +9,7 @@
   font-family: "Roboto Condensed", sans-serif;
 }
 
-html, body {
-  overflow-x: hidden;
+body {
   line-height: 1.44;
 }
 
@@ -52,6 +51,7 @@ main {
 }
 
 .app-container {
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 1fr;
@@ -199,7 +199,7 @@ main {
 
       h1 {
         text-transform: uppercase;
-        line-height: 0;
+        // line-height: 0;
       }
 
       h2 {
